--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 # gRPC
 prost = "0.11.0"
 prost-types = "0.11.9"
-tonic = { version = "0.9.2", features = ["gzip", "transport"] }
+tonic = { version = "0.9.2", features = ["gzip", "transport", "prost"] }
 
 [build-dependencies]
 tonic-build = { version = "0.9.2", features = ["prost"] }
