--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,9 @@ prost = "0.11.0"
 prost-types = "0.11.9"
 tonic = { version = "0.9.2", features = ["gzip", "transport", "prost"] }
 
+chrono = { version = "0.4.26", features = ["serde"] }
+
+thiserror = "1.0.30"
+
 [build-dependencies]
 tonic-build = { version = "0.9.2", features = ["prost"] }
