--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 prost = "0.11.0"
 prost-types = "0.11.9"
 tonic = { version = "0.9.2", features = ["gzip", "transport", "prost"] }
+tonic-reflection = "0.9.2"
 
 chrono = { version = "0.4.26", features = ["serde"] }
 
